@@ -12,20 +12,22 @@ import com.powsybl.dynawaltz.models.VarConnection;
 import com.powsybl.dynawaltz.models.VarMapping;
 import com.powsybl.dynawaltz.models.buses.EquipmentConnectionPoint;
 import com.powsybl.dynawaltz.models.macroconnections.MacroConnectionsAdder;
+import com.powsybl.iidm.network.extensions.StandbyAutomaton;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * @author Laurent Issertial <laurent.issertial at rte-france.com>
+ * @author Laurent Issertial {@literal <laurent.issertial at rte-france.com>}
  */
 public class StaticVarCompensator extends AbstractEquipmentBlackBoxModel<com.powsybl.iidm.network.StaticVarCompensator> implements StaticVarCompensatorModel {
 
-    private static final List<VarMapping> VAR_MAPPING = Arrays.asList(
-            new VarMapping("SVarC_injector_PInjPu", "p"),
-            new VarMapping("SVarC_injector_QInjPu", "q"),
-            new VarMapping("SVarC_injector_state", "state"),
-            new VarMapping("SVarC_modeHandling_mode_value", "regulatingMode"));
+    private static final VarMapping P_MAPPING = new VarMapping("SVarC_injector_PInjPu", "p");
+    private static final VarMapping Q_MAPPING = new VarMapping("SVarC_injector_QInjPu", "q");
+    private static final VarMapping STATE_MAPPING = new VarMapping("SVarC_injector_state", "state");
+    private static final VarMapping MODE_MAPPING = new VarMapping("SVarC_modeHandling_mode_value", "regulatingMode");
+
+    private static final List<VarMapping> VAR_MAPPING_NO_STANDBY_AUTOMATON = List.of(P_MAPPING, Q_MAPPING, STATE_MAPPING);
+    private static final List<VarMapping> VAR_MAPPING_WITH_STANDBY_AUTOMATON = List.of(P_MAPPING, Q_MAPPING, STATE_MAPPING, MODE_MAPPING);
 
     public StaticVarCompensator(String dynamicModelId, com.powsybl.iidm.network.StaticVarCompensator svarc, String parameterSetId, String lib) {
         super(dynamicModelId, parameterSetId, svarc, lib);
@@ -42,7 +44,8 @@ public class StaticVarCompensator extends AbstractEquipmentBlackBoxModel<com.pow
 
     @Override
     public List<VarMapping> getVarsMapping() {
-        return VAR_MAPPING;
+        StandbyAutomaton standbyAutomaton = equipment.getExtension(StandbyAutomaton.class);
+        return standbyAutomaton == null ? VAR_MAPPING_NO_STANDBY_AUTOMATON : VAR_MAPPING_WITH_STANDBY_AUTOMATON;
     }
 
     @Override
